--- a/src/index.scss
+++ b/src/index.scss
@@ -1,8 +1,11 @@
 
+
+
 @import "./style/vars";
 @import "./style/reset";
 
 @import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&family=Roboto:wght@400;700&display=swap");
+
 
 
 body.lock{
@@ -105,17 +108,31 @@ body.lock{
 	font-size: 1.5rem;
 	line-height: calc(34 / 24);
 	color: $secondColor;
+	@media(max-width:1024px){
+		font-size: 1.3rem;
+	}
+	@media(max-width:1024px){
+		font-size: 1.3rem;
+	}
+	
+
 }
 .large-t {
 	font-weight: 700;
 	font-size: 2.625rem;
 	line-height: calc(58 / 42);
 	color: $secondColor;
+	@media(max-width:1024px){
+		font-size: 2rem;
+	}
 	@media(max-width:768px){
 		font-size: 1.8rem;
 	}
 	@media(max-width:576px){
 		font-size: 1.5rem;
+	}
+	@media(max-width:460px){
+		font-size: 1.4rem;
 	}
 }
 
@@ -732,6 +749,9 @@ body.lock{
 			flex-direction: column;
 			row-gap: 1.5rem;
 		}
+		@media(max-width:576px){
+			padding-bottom: 18%;
+		}
 	}
 
 	&__content {
@@ -814,7 +834,6 @@ body.lock{
 		grid-template-columns: repeat(2, 1fr);
 		margin-bottom: 15%;
 	}
-	
 
 	&__item {
 		display: flex;
@@ -890,6 +909,14 @@ body.lock{
 		align-items: center;
 		text-align: center;
 		padding-block: 16.4% 32.54%;
+		@media(max-width:1024px){
+			padding-block: 16.4% 37.54%;
+		}
+		@media(max-width:768px){
+			padding-block: 12% 12%;
+			margin-bottom: 3rem;
+		}
+
 	}
 
 	&__subtitle {
@@ -902,6 +929,11 @@ body.lock{
 	}
 
 	&__btns {
+		@media(max-width: 460px){
+			flex-direction: column;
+			width: 95%;
+			gap: .8rem;
+		}
 	}
 }
 
@@ -916,19 +948,27 @@ body.lock{
 	&__wrapper-p {
 		position: relative;
 		padding-bottom: 65.4%;
+		@media(max-width:768px){
+			padding-bottom: 0;
+
+		}
+
 	}
 	&__wrapper {
 		padding-bottom: 16.4%;
 		position: absolute;
 		left: 0;
-		//top: -33.333%;
 		transform: translateY(-29.3%);
+		@media(max-width:768px){
+			position: relative;
+			transform: translateY(0);
+		}
 	}
 
 	&__video {
 		position: relative;
 		width: 100%;
-		border-radius: 57px;
+		border-radius: 3.5625rem;
 		padding-bottom: 56.4%;
 		overflow: hidden;
 		margin-bottom: 6.6%;
@@ -954,7 +994,17 @@ body.lock{
 			left: 50%;
 			object-fit: contain;
 			cursor: pointer;
+			width: 15%;
 		}
+		@media(max-width:768px){
+			margin-bottom: 10%;
+		}
+
+		@media(max-width: 460px){
+			border-radius: 2.1875rem;
+			margin-bottom: 14%;
+		}
+
 	}
 
 	&__text-block {
@@ -963,9 +1013,18 @@ body.lock{
 
 .block-text {
 	gap: 3rem;
+	@media(max-width:768px){
+		flex-direction: column;
+		align-items: flex-start;
+	}
+
 
 	&__item {
 		max-width: 35.5rem;
+		@media(max-width:768px){
+			padding-inline: 2rem;
+		}
+
 	}
 
 	&__title {
@@ -984,21 +1043,52 @@ body.lock{
 .help {
 	&__wrapper {
 		padding-bottom: 16.4%;
+		@media(max-width:1024px){
+			padding-top: 9%;
+		}
+		@media(max-width:845px){
+			padding-top: 12%;
+		}
+
 	}
 	&__header {
 		margin-bottom: 5.25%;
+		@media(max-width:576px){
+			flex-direction: column;
+			align-items: center;
+			text-align: center;
+		}
+		@media(max-width:460px){
+			margin-bottom: 8%;
+		}
+	}
+	&__title{
+		@media(max-width:576px){
+			margin-bottom: 2rem;
+		}
+
 	}
 
 	&__button {
 		max-height: 4.05em;
 		align-self: end;
+		@media(max-width:576px){
+			align-self: center;
+		}
+
 	}
 
 	&__grid {
 		display: grid;
 		grid-template-columns: repeat(auto-fit, minmax(24.25rem, 1fr));
 		grid-auto-rows: 1fr;
-		gap: 1.75rem;
+		gap: 1rem 1.75rem;
+		@media(max-width:845px){
+			grid-template-columns: repeat(auto-fit, minmax(22.5rem, 1fr));
+		}
+		@media(max-width:845px){
+			grid-template-columns: repeat(auto-fit, minmax(17rem, 1fr));
+		}
 	}
 
 	&__grid-item {
@@ -1018,6 +1108,12 @@ body.lock{
 	grid-template: auto 1fr auto / 1fr;
 	text-align: center;
 	padding: 3.5625rem 2.375rem;
+	@media(max-width:576px){
+		padding: 2.6rem 1.3rem;
+	}
+	@media(max-width:460px){
+		padding: 1.4rem 0.8rem;
+	}
 
 	&__icon {
 		max-width: 10.75rem;
@@ -1030,16 +1126,32 @@ body.lock{
 			object-fit: contain;
 			height: 100%;
 		}
+		@media(max-width:845px){
+			max-width: 8rem;
+			max-height: 8rem;
+		}	
+
 	}
 
 	&__title {
 		margin-bottom: 0.46em;
+		@media(max-width:576px){
+			font-size: 1.4rem;
+		}
 	}
 
 	&__text {
 		font-family: $fontSecond;
 		font-size: 1.125rem;
 		line-height: calc(30 / 18);
+		
+		@media(max-width:576px){
+			font-size: 1rem;
+		}
+		@media(max-width:768px){
+			max-width: 85%;
+			margin: 0 auto;
+		}
 	}
 }
 
@@ -1050,23 +1162,54 @@ body.lock{
 	}
 
 	&__wrapper {
-		background: url("./img/news/Frame.jpg");
+		background: url("./img/news/Frame.jpg") no-repeat;
+		background-size: cover;
 		border-radius: 40px;
 		width: 100%;
 		padding: 13.28% 4.91% 12.95%;
 		margin-bottom: 16.4%;
+		@media(max-width:1024px){
+			padding: 13.28% 2.3% 12.95%;
+		}
+		@media(max-width:845px){
+			flex-direction: column;
+			text-align: center;
+			padding: 10% 2.3% 10.5%;
+		}
+
 	}
 
 	&__title {
 		max-width: 11.6em;
+
+		@media(max-width:845px){
+			margin-inline: auto;
+			margin-bottom: 3rem;
+		}
+		@media(max-width:460px){
+			margin-bottom: 2rem;
+		}
 	}
 
 	&__btns {
+		@media(max-width:845px){
+			align-self: center;
+		}
+		@media(max-width:460px){
+			flex-direction: column;
+			row-gap: 0.7rem;
+		}
 	}
 
 	&__button {
 		max-height: 4.05em;
 		align-self: end;
+		@media(max-width:1024px){
+			padding: 1em 1.4em 1.2em;
+		}
+		@media(max-width:460px){
+			align-self: auto;
+		}
 	}
 }
 
@@ -1079,12 +1222,24 @@ body.lock{
 	&__wrapper {
 		gap: 5.9%;
 		padding-bottom: 16.4%;
+		@media(max-width:1024px){
+			padding-bottom: 12%;
+		}
+		@media(max-width:719px){
+			flex-direction: column-reverse;
+		}
 	}
+	
+
 
 	&__image {
 		position: relative;
 		flex: 1 1 50%;
 		padding-bottom: 3.25rem;
+		@media(max-width:719px){
+			align-self: center;
+		}
+
 	}
 
 	&__content {
@@ -1092,6 +1247,12 @@ body.lock{
 		flex-direction: column;
 		flex: 1 1 50%;
 		justify-content: center;
+		@media(max-width:719px){
+			align-items: center;
+			text-align: center;
+			margin-bottom: 7%;
+		}
+
 	}
 
 	&__text {
@@ -1099,19 +1260,42 @@ body.lock{
 		font-size: 1.0625rem;
 		line-height: calc(30 / 17);
 		margin-bottom: 0.71em;
+		@media(max-width:845px){
+			font-size: 1rem;
+		}
+		@media(max-width:719px){
+			max-width: 75%;
+		}
+		@media(max-width:460px){
+			max-width: 85%;
+			font-size: 0.85rem;
+		}
+
 	}
 
 	&__list {
 		margin-bottom: 8.34%;
+		@media(max-width:719px){
+			align-self: flex-start;
+			text-align: left;
+			margin-block: 5% 2%; 
+		}
 	}
 
 	&__list-item {
 		font-weight: 700;
 		margin-bottom: 0.8em;
+		@media(max-width:460px){
+			font-size: 0.85rem;
+		}
 	}
 
 	&__button {
 		max-width: 10em;
+		@media(max-width:719px){
+			align-self: start;
+		}
+
 	}
 
 	&__subtitle {
@@ -1144,11 +1328,32 @@ body.lock{
 	border-radius: 12px;
 	padding: 4.25rem 2.5625rem;
 	max-width: 67.6%;
+	@media(max-width:1024px){
+		max-width: 90%;
+		padding: 2.3rem 1.4rem;
+	}
+	@media(max-width:719px){
+		max-width: 70%;
+		padding: 1rem 0.6rem;
+		left: 6%;
+	}
+	@media(max-width:460px){
+		max-width: 85%;
+		padding: 0.8rem 0.4rem;
+	}
+
 
 	&__text {
 		font-size: 1.125rem;
 		line-height: calc(30 / 18);
 		margin-bottom: 0.9444em;
+		@media(max-width:845px){
+			font-size: 1rem;
+		}
+		@media(max-width:460px){
+			font-size: 0.85rem;
+		}
+
 	}
 
 	&__name {
@@ -1157,11 +1362,20 @@ body.lock{
 		line-height: calc(20 / 18);
 		margin-bottom: 0.8333em;
 		color: $secondColor;
+		@media(max-width:460px){
+			font-size: 1rem;
+		}
 	}
 
 	&__info {
 		font-size: 1.0625rem;
 		line-height: calc(20 / 17);
+		@media(max-width:845px){
+			font-size: 1rem;
+		}
+		@media(max-width:460px){
+			font-size: 0.85rem;
+		}
 	}
 }
 
@@ -1173,16 +1387,25 @@ body.lock{
 	&__wrapper {
 		padding-block: 16.4%;
 	}
-
 	&__body {
 		position: relative;
 		column-gap: 1.75rem;
 		margin-bottom: 5.33%;
 		padding-bottom: 14rem;
+		@media(max-width:719px){
+			flex-direction: column;
+			padding-bottom: 0;
+			margin-bottom: 5rem;
+		}
 	}
 
 	&__btns {
 		justify-content: center;
+		@media(max-width: 460px){
+			flex-direction: column;
+			width: 95%;
+			gap: .8rem;
+		}
 	}
 
 	&__title-block {
@@ -1201,19 +1424,45 @@ body.lock{
 	&__item {
 		flex: 1 1 50%;
 	}
+	&__item:not(:last-child){
+		margin-bottom: 2.8125rem;
+	}
 
 	&__image {
+		@media(max-width:719px){
+			img{
+				width: 100%;
+			}
+		}
 	}
 
 	&__card {
 		position: absolute;
 		right: 0;
 		transform: translateY(-26.78%);
+			@media(max-width:719px){
+				//transform: translateY(-120.78%);
+				transform: translateY(-12.875rem);
+			}
+			@media(max-width:576px){
+				transform: translateY(-11.875rem);
+			}
+			@media(max-width:460px){
+				transform: translateY(-10.875rem);
+			}
+			@media(max-width:375px){
+				transform: translateY(-10.3rem);
+			}
+			@media(max-width:375px){
+				transform: translateY(-10rem);
+			}
 	}
 
 	&__title {
+	
 	}
 }
+
 
 .card {
 	max-width: 44.92%;
@@ -1223,6 +1472,15 @@ body.lock{
 	border-radius: 12px;
 	padding: 4%;
 	background-color: #fff;
+	@media(max-width:1024px){
+		padding: 2%;
+	}
+	@media(max-width:719px){
+		padding: 1.5%;
+	}
+	@media(max-width:576px){
+		max-width: 15.625rem;
+	}
 
 	&__data {
 		display: flex;
@@ -1232,6 +1490,9 @@ body.lock{
 		line-height: calc(20 / 17);
 		font-family: $fontSecond;
 		margin-bottom: 1.125rem;
+		@media(max-width:719px){
+			font-size: 0.9rem;
+		}
 	}
 
 	&__data-tab {
@@ -1244,6 +1505,13 @@ body.lock{
 		&:hover {
 			border: 1px solid $btnColor;
 		}
+		@media(max-width:719px){
+			font-size: 0.9rem;
+		}
+		@media(max-width:576px){
+			padding: 0.5em 1em 0.7em;
+		}
+
 	}
 
 	&__data-date {
@@ -1253,6 +1521,15 @@ body.lock{
 		color: $secondColor;
 		margin-bottom: 1.21em;
 		max-width: 17.42em;
+		@media(max-width:719px){
+			font-size: 1.1rem;
+		}
+		@media(max-width:460px){
+			font-size: 0.9rem;
+		}
+		@media(max-width:320px){
+			font-size: 0.7rem;
+		}
 	}
 
 	&__link {
@@ -1276,10 +1553,20 @@ body.lock{
 			border-radius: 5px;
 			background-color: #fab752;
 			transition: 0.4s;
+			@media(max-width:576px){
+				left: -0.2em;
+			}
 		}
 		&:hover::before {
 			background-color: $btnColor;
 		}
+		@media(max-width:1024px){
+			font-size: 1rem;
+		}
+		@media(max-width:719px){
+			font-size: 0.9rem;
+		}
+
 	}
 }
 .card--right {
@@ -1291,7 +1578,16 @@ body.lock{
 .footer {
 	&__top {
 		display: flex;
-		padding-block: 13.36% 10.08% ;
+		padding-block: 13.36% 10.08%;
+		@media(max-width:1024px){
+			flex-wrap: wrap;
+			row-gap: 2.3rem;
+		}
+		@media(max-width:576px){
+			display: grid;
+			grid-template: max-content 1fr min-content / repeat(2, 1fr);
+		}
+
 	}
 
 	&__bottom {
@@ -1306,15 +1602,37 @@ body.lock{
 	font-size: 1.125rem;
 	line-height: calc(20 / 18);
 
+	@media(max-width:576px){
+		font-size: 1rem;
+	}
+
+
+
 	&__logo {
 		max-width: 27.54%;
 		margin-right: 4.84%;
+		@media(max-width:1024px){
+			flex: 25%;
+			margin-right: 1rem;
+		}
+		@media(max-width:576px){
+			grid-column: 1 / 3;
+			grid-row: 1 / 2;
+			max-width: 60%;
+			text-align: center;
+			margin: 0 auto;
+
+		}
 
 		
 	}
 	.logo__img{
-			margin-bottom: 1.6875rem;
+		margin-bottom: 1.6875rem;
+			@media(max-width:576px){
+				justify-content: center;
+			}
 	}
+
 
 	&__text {
 	}
@@ -1323,9 +1641,18 @@ body.lock{
 		justify-content: start;
 		margin-right: 2.05%;
 		flex: auto;
+		
+		@media(max-width:1024px){
+			flex: 25%;
+		}
 	}
 
 	&__join {
+	}
+}
+.footer-logo-txt{
+	@media(max-width:768px){
+		display: none;
 	}
 }
 
@@ -1333,6 +1660,13 @@ body.lock{
 	font-family: $fontSecond;
 	font-size: 1.125rem;
 	line-height: calc(20 / 18);
+	@media(max-width:576px){
+		font-size: 1rem;
+		font-size: 1rem;
+		grid-column: 1 / 2;
+		grid-row: 2 / 3;
+		justify-self: center;
+	}
 
 	&__title {
 		font-weight: 700;
@@ -1340,6 +1674,9 @@ body.lock{
 		line-height: calc(22 / 20);
 		margin-bottom: 2.1em;
 		color: $secondColor;
+		@media(max-width:576px){
+			font-size: 1.1rem;
+		}
 	}
 
 	&__list {
@@ -1350,11 +1687,19 @@ body.lock{
 	}
 
 	&__link {
+		&:hover {
+			text-decoration: underline;
+		}
 	}
 
 	&__utility {
 		margin-right: 4.84%;
 		flex: auto;
+		@media(max-width:1024px){
+			flex: 25%;
+
+		}
+
 	}
 }
 
@@ -1362,6 +1707,13 @@ body.lock{
 	font-family: $fontSecond;
 	font-size: 1.125rem;
 	line-height: calc(20 / 18);
+	@media(max-width:576px){
+		font-size: 1rem;
+		grid-column: 2 /3;
+		grid-row: 2 / 3;
+		justify-self: center;
+
+	}
 
 	&__title {
 		font-weight: 700;
@@ -1370,6 +1722,9 @@ body.lock{
 		color: $secondColor;
 		max-width: 5.19em;
 		margin-bottom: 1.03em;
+		@media(max-width:576px){
+			font-size: 1.1rem;
+		}
 	}
 
 	&__list {
@@ -1380,28 +1735,57 @@ body.lock{
 	}
 
 	&__link {
+		&:hover {
+			text-decoration: underline;
+		}
 	}
 }
 
 .join-footer {
 	max-width: 31.8%;
 	width: 100%;
+	@media(max-width:1024px){
+		max-width: 100%;
+		text-align: center;
+	}
+	@media(max-width:576px){
+		grid-column: 1 /3;
+		grid-row: 3 / 4;
+	}
+
 
 	&__container {
 	}
 
 	&__wrapper {
-		background: url("./img/news/Frame.jpg");
+		background: url("./img/news/Frame.jpg") no-repeat;
+		background-size: cover;
 		border-radius: 40px;
 		width: 100%;
 		padding: 16.5% 12.37% 12.89%;
+		@media(max-width:1024px){
+			padding: 10% 12.37% 8%;
+		}
+		@media(max-width:576px){
+			padding: 10% 4% 8%;
+			font-size: 0.9rem;
+		}
+
 	}
 
 	&__title {
 		margin-bottom: 0.875em;
+		@media(max-width:576px){
+			font-size: 0.9rem;
+		}
 	}
 
 	&__btns {
+		@media(max-width:1024px){
+			max-width: 60%;
+			margin: 0 auto;
+		}
+
 	}
 
 	&__button {
@@ -1412,5 +1796,43 @@ body.lock{
 	}
 }
 
-.social {
+.footer {
+	&__bottom{
+		align-items: center;
+		padding: 2.3125rem 2rem 1.75rem;
+		@media(max-width:576px){
+			flex-direction: column-reverse;
+			row-gap: 1rem;
+		}
+	}
+
+	&__bottom-copyright {
+		font-family: $fontSecond;
+		font-size: 1.125rem;
+		line-height: calc(30 / 18);
+	}
 }
+.social {
+	display: flex;
+	column-gap: .75rem;
+}
+.fa-brands {
+	font-size: 2.25rem;
+	line-height: 36;
+	transition: .3s;
+	&:hover{
+		transform: translateY(2px);
+	}
+}
+
+.fa-facebook {
+	color: rgb(66 103 178);
+}
+.fa-twitter {
+	color: rgb(29 161 242);
+}
+.fa-youtube {
+	color: rgb(255 0 0);
+}
+
+
